refactor(UI): improve formatting, readability and efficiency