@@ -1,13 +1,12 @@
 package com.rogeriofrsouza.app;
 
-import java.util.InputMismatchException;
-import java.util.List;
-import java.util.Scanner;
-import java.util.stream.Collectors;
-
 import com.rogeriofrsouza.app.chess.ChessMatch;
 import com.rogeriofrsouza.app.chess.ChessPiece;
 import com.rogeriofrsouza.app.chess.ChessPosition;
+
+import java.util.InputMismatchException;
+import java.util.List;
+import java.util.Scanner;
 
 public class UI {
 
@@ -29,21 +28,18 @@ public class UI {
     public void printMatch(ChessMatch chessMatch, List<ChessPiece> captured) {
         printBoard(chessMatch.getPieces(), null);
 
-        List<ChessPiece> white =
-                captured.stream()
-                        .filter(piece -> piece.getColor() == ChessPiece.Color.WHITE)
-                        .collect(Collectors.toList());
+        List<ChessPiece> white = captured.stream()
+            .filter(piece -> piece.getColor() == ChessPiece.Color.WHITE)
+            .toList();
 
-        List<ChessPiece> black =
-                captured.stream()
-                        .filter(piece -> piece.getColor() == ChessPiece.Color.BLACK)
-                        .collect(Collectors.toList());
+        List<ChessPiece> black = captured.stream()
+            .filter(piece -> piece.getColor() == ChessPiece.Color.BLACK)
+            .toList();
 
         System.out.println("\nCaptured pieces");
 
-        System.out.printf(
-                "White: %s%s%n%sBlack: %s%s%n%s",
-                ANSI_WHITE, white, ANSI_RESET, ANSI_YELLOW, black, ANSI_RESET);
+        System.out.printf("White: %s%s%n%sBlack: %s%s%n%s",
+            ANSI_WHITE, white, ANSI_RESET, ANSI_YELLOW, black, ANSI_RESET);
 
         System.out.println("\nTurn: " + chessMatch.getTurn());
 
@@ -63,7 +59,7 @@ public class UI {
         StringBuilder stringBuilder = new StringBuilder();
 
         for (int i = 0; i < pieces.length; i++) {
-            stringBuilder.append((8 - i) + " ");
+            stringBuilder.append((8 - i)).append(" ");
 
             for (int j = 0; j < pieces[i].length; j++) {
                 if (possibleMoves != null && possibleMoves[i][j]) {
@@ -73,11 +69,10 @@ public class UI {
                 if (pieces[i][j] == null) {
                     stringBuilder.append("-");
                 } else {
-                    String color =
-                            pieces[i][j].getColor() == ChessPiece.Color.WHITE
-                                    ? ANSI_WHITE
-                                    : ANSI_YELLOW;
-                    stringBuilder.append(color + pieces[i][j]);
+                    String color = pieces[i][j].getColor() == ChessPiece.Color.WHITE
+                        ? ANSI_WHITE
+                        : ANSI_YELLOW;
+                    stringBuilder.append(color).append(pieces[i][j]);
                 }
 
                 stringBuilder.append(ANSI_RESET + " ");
@@ -87,7 +82,7 @@ public class UI {
         }
 
         stringBuilder.append("  a b c d e f g h");
-        System.out.println(stringBuilder.toString());
+        System.out.println(stringBuilder);
     }
 
     private String readInput(Scanner scanner) {
@@ -105,7 +100,7 @@ public class UI {
 
         if (!input.matches("[a-h][1-8]")) {
             throw new InputMismatchException(
-                    "Error reading ChessPosition. Valid values are from a1 to h8.");
+                "Error reading ChessPosition. Valid values are from a1 to h8.");
         }
 
         char column = input.charAt(0);
@@ -118,9 +113,9 @@ public class UI {
         String input = readInput(scanner).substring(0, 1);
 
         return ChessMatch.possiblePromotedPieces
-                .stream()
-                .filter(pieceName -> pieceName.getLetter().equalsIgnoreCase(input))
-                .findFirst()
-                .orElse(null);
+            .stream()
+            .filter(pieceName -> pieceName.getLetter().equalsIgnoreCase(input))
+            .findFirst()
+            .orElse(null);
     }
 }
